--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bin": "./build/Release/ios-deploy",
   "repository": {
     "type": "git",
-    "url": "https://github.com/phonegap/ios-deploy"
+    "url": "https://github.com/ios-control/ios-deploy"
   },
   "devDependencies": {
   	"jshint": "2.5.8"
