--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ _Frameworks/*
 *~
 src/scripts/lldb.pyc
 src/ios-deploy/lldb.py.h
+package-lock.json
+xcuserdata
+/ios-deploy.xcodeproj/project.xcworkspace
