Update package.json with 'files' property (to whitelist files for npm pack)

--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "pycompile": "python -m py_compile src/scripts/*.py",
     "postversion": "echo \\\"$npm_package_version\\\" > src/ios-deploy/version.h"
   },
+  "files": [
+    "demo",
+    "src",
+    "ios-deploy.xcodeproj/project.pbxproj",
+    "ios-deploy.xcodeproj/xcshareddata"
+  ],
   "keywords": [
     "ios-deploy",
     "deploy to iOS device"
